# ccslgraphs

./: .gitignore  CLAUDE.md  README.md  install.py  pyproject.toml  statusline.py  uninstall.py  usage_fetch.py
.github/workflows/: ci.yml
scripts/: preview.py
src/: statusline.py
tests/: test_install.py  test_statusline.py
